--- a/src/components/Frontend/Frontend.css
+++ b/src/components/Frontend/Frontend.css
@@ -24,9 +24,14 @@
 
 .repos > li li {
   border-radius: 50px;
+  border: 1px solid rgb(221, 232, 241);
+  color: #797979;
+  padding: 0 10px;
+}
+.repos > li li.filterOn {
+  border: 1px solid rgba(59, 217, 208, 0);
   background: rgba(59, 217, 208, 0.1);
   color: #3bd9d0;
-  padding: 0 10px;
 }
 .repos {
   display: flex;
