--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
   overflow-x: hidden;
-  padding: 40px 0 0 0;
   margin: 0;
   box-sizing: border-box;
   height: 100%;
@@ -8,6 +7,7 @@ body {
   background: rgba(232, 245, 255, 0.1);
   font-family: 'reg';
   letter-spacing: .03em;
+  color: #3c3f50;
 }
 ul {list-style: none}
 
@@ -29,6 +29,11 @@ input[type="text"] {
   font-size: .8em;
   padding: 3px 0;
 }
+
+h1,h2,h3,h4 {margin: 0}
+
+.pTop { padding-top: 80px }
+
 
 
 
