--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -72,6 +72,7 @@
       background-position: center center !important;
       background-size: cover;
       height: 100vh;
+      box-sizing: border-box;
     }
 }
 
