--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,10 +8,9 @@ footer {
 
 
 footer section {
-  width: 1000px;
+  width: 90vw;
   margin: 0 auto;
+  text-align: right;
+  padding: 20px 0;
 }
 
-@media (min-width:1000px){
-  footer section {width: 1000px}
-}
